# df

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain
.cargo/: config
df/: Cargo.toml
df-py/: Cargo.toml
df-py/src/: lib.rs
df/benches/: bench.rs
df/src/: df.rs  index.rs  lib.rs  simd.rs
df/src/series/: any.rs  binary_ops.rs  logical_ops.rs  mod.rs  num_ops.rs  sum.rs  unary_ops.rs  where_.rs
df/src/series/tests/: bool.rs  mod.rs  str.rs
df/src/storage/: bit_vec.rs  mod.rs  string.rs  vec.rs
test/: requirements.txt  test_benches.py
